# WarGS

./: .gitignore  ChangeLog  NEWS  README  configure  configure.ac  index.html
src/: Makefile.am  Makefile.in  Makefile.windows  audio.c  audio.h  chp.S  combatii.S  conf.c  conf.h  dos.c  exit.c  game.c  game.h  keyboard.c  keyboard.h  list.c  list.h  log.c  log.h  mouse.c  mouse.h  pack.S  ttl.S  video.c  video.h  wargs-chp.c  wargs-combatii.c  wargs-pack.c  wargs-ttl.c  wargs.c
tool/: mkwrappers  mkwrappers.conf  wargs-run  wargs-setup
