#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([WarGS], [0.1], [wargs@googlegroups.com])
AC_CONFIG_SRCDIR([src/wargs.c])
AC_CONFIG_HEADERS([src/config.h])

AM_INIT_AUTOMAKE([gnits -Wall -Werror])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

CFLAGS="-Wall -Werror ${CFLAGS}"

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
